@@ -64,6 +64,7 @@ delete_message = "<#Are you sure you want to delete the lp source?#>";
 			<p><b><#Note#>:</b> You can enter multiple league pages, but only the top one in the list will be processed.</p>
 			<p><b><#Note#>:</b> The source must be enabled before it can be processed.</p>
 			<p><b><#Note#>:</b> <#If you change the league page you must <strong><a href="reset.php">Reset All Stats</a></strong> including erasing Team Profiles and Non-Admin Users.#></p>
+			<p><b><#Note#>:</b> <#The <b>Last Update</b> time is shown in <b>UTC</b> plus the configured time zone offset.  See: <strong><a href="conf.php?step=&ct=theme&s=format&q=">Formats / HTML</a></strong>.#></p>
 			<p><b><#Date#></b> is the date of the league page.</p>
 		</div>
 	</div>
