@@ -34,7 +34,7 @@ INSERT INTO `psss_config` (`id`, `conftype`, `section`, `var`, `value`, `label`,
         (401,'theme',NULL,'template_dir','','Theme Directory','text',0,'','','Absolute path to the directory where your themes are installed. Note: This path must be accessible to the webserver.\r\n\r\n<b>Recommendation:</b> Leave blank for default.\r\n<b>See also:</b> \"Theme Base URL\"'),
         (402,'theme',NULL,'compile_dir','','Compile directory for themes','text',0,'','','The compile directory defines where compiled theme templates are written to. The directory must be <b>writable</b> by the web server user. If it\'s not your stats website will not work.\r\n\r\n<b>This setting has no effect if \"Compile to Disk\" is set to \"No\".</b>\r\n\r\n<b>See Also:</b> \"Compile to Disk\" (fetch_compile)\r\n<b>Recommendation:</b> Leave blank for default.'),
         (407,'theme','permissions','show_benchmark','1','Show Page Benchmark?','boolean',0,'','','In the footer of most pages is a benchmark that displays the total time it took to process the page and how many SQL queries it took. Disabling this setting will hide that output.\r\n\r\n<b>Note:</b> This option relies on the theme supporting this configuration setting. A theme can either choose to always show the link, use this setting, or never show the link. If you use third party themes then verify your settings are being applied properly. You may wish to contact the theme author if there are any problems.\r\n \r\n<b>Recommendation:</b> Personal preference, do what you want.'),
-        (408,'theme','format','time_offset','','Time Offset','text',0,'numeric','size=5','This value is used to offset any time values displayed in the stats. For instance, if your local website is in US/Eastern time (-5) and your game server is in US/Central time (-4) you might want to put an offset value of \"-1\" here so the times display on the website will reflect the times that actually occured on the game server.\r\n\r\nThis is a cosmetic setting only and has no real affect on stats.'),
+        (408,'theme','format','time_offset','','Time Offset','text',0,'','size=5','This value is used to offset the last update time displayed in the Admin CP.  It has no effect on the last update time displayed in the stats, that is displayed in the time zone appropriate for the web client.  You can enter +/- a number of hours, or +/- an hour with minutes.  For example \"-3:30\".\r\n\r\nThis is a cosmetic setting only and has no real affect on stats.'),
         (410,'theme','himgs','max_size','262144','Maximum file size','text',0,'blank,numeric','size=5','Maximum size in bytes uploaded help images are allowed to be.'),
         (411,'theme','himgs','max_width','800','Maximum width','text',0,'blank,numeric','size=5','Maximum width in pixels allowed for help images.'),
         (412,'theme','himgs','max_height','800','Maximum height','text',0,'blank,numeric','size=5','Maximum height in pixels allowed for help images.'),
